examples/test/testpolicy7939.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7939
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key15: value38
      key41: value43
      key25: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value41
          key49: value35
          key44: value22
